fix: improved cards alignment when max-size is lower or equals to 480px

--- a/src/style/components/Carousel.css
+++ b/src/style/components/Carousel.css
@@ -63,6 +63,10 @@
 }
 
 @media screen and (max-width: 480px) {
+    .carousel-control {
+        grid-template-columns: 5% 90% 5%;
+    }
+
     .control-button {
         display: none;
     }
